--- a/tinyapp/views/partials/_header.ejs
+++ b/tinyapp/views/partials/_header.ejs
@@ -18,5 +18,23 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if(username === "") { %>
+    <form method="POST" action="/login">
+      <input
+        type="text"
+        placeholder="username"
+        name="username"
+        value="<%= username %>"
+      />
+      <button class="btn btn-primary">Submit</button>
+    </form>
+    <% } else { %>
+    <form method="POST" action="/logout">
+      <p>
+        Logged in as: <%=username %>
+        <button class="btn btn-primary">Logout</button>
+      </p>
+    </form>
+    <% } %>
   </nav>
 </header>
