--- a/tinyapp/views/partials/_header.ejs
+++ b/tinyapp/views/partials/_header.ejs
@@ -18,23 +18,20 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if(username === "") { %>
-    <form method="POST" action="/login">
-      <input
-        type="text"
-        placeholder="username"
-        name="username"
-        value="<%= username %>"
-      />
-      <button class="btn btn-primary">Submit</button>
-    </form>
+    <% if(typeof user_email != "undefined") { %>
+    <div class="navbar-nav">
+      <form method="POST" action="/logout">
+        <p>
+          Logged in as: <%= user_email %>
+          <button class="btn btn-primary">Logout</button>
+        </p>
+      </form>
+    </div>
     <% } else { %>
-    <form method="POST" action="/logout">
-      <p>
-        Logged in as: <%=username %>
-        <button class="btn btn-primary">Logout</button>
-      </p>
-    </form>
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="/register">Register</a>
+      <a class="nav-item nav-link" href="/login">Login</a>
+    </div>
     <% } %>
   </nav>
 </header>
