--- a/tinyapp/views/urls_show.ejs
+++ b/tinyapp/views/urls_show.ejs
@@ -16,16 +16,16 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title">TinyURL for: <%= data.longURL %></h5>
         <p class="card-text">
-          Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
+          Short URL: <a href="/u/<%= shortURL %>"><%= data.shortURL %></a>
         </p>
       </div>
       <div class="card-footer text-muted">
         <h2>Edit</h2>
-        <form method="POST" action="/urls/<%= shortURL %>">
+        <form method="POST" action="/urls/<%= data.shortURL %>">
           <label class="card-title">New Url:</label>
-          <input type="text" name="longURL" value="<%= longURL %>">
+          <input type="text" name="longURL" value="<%= data.longURL %>">
           <button class="btn btn-primary">Submit</button>
         </form>
       </div>
