--- a/tinyapp/views/urls_index.ejs
+++ b/tinyapp/views/urls_index.ejs
@@ -19,6 +19,9 @@
   <body>
     <%- include('partials/_header') %>
     <main style="margin: 1em">
+      <% if (error) { %>
+      <div class="alert alert-danger"><strong>Error!</strong> Invalid URL</div>
+      <% } %>
       <h3>My URLs</h3>
       <table class="table">
         <thead>
@@ -30,7 +33,7 @@
           </tr>
         </thead>
         <tbody>
-          <% for(let url in urls) { %>
+          <% if(typeof urls !== 'undefined') { %> <% for(let url in urls) { %>
           <tr>
             <td><%= urls[url].shortURL %></td>
             <td><%= urls[url].longURL %></td>
@@ -48,7 +51,7 @@
               </form>
             </td>
           </tr>
-          <% } %>
+          <% } %> <% } %>
         </tbody>
       </table>
     </main>
