--- a/tinyapp/views/urls_login.ejs
+++ b/tinyapp/views/urls_login.ejs
@@ -14,6 +14,15 @@
   <body>
     <%- include('partials/_header') %>
     <div class="card-footer text-muted">
+      <% if (error.invalidUser) { %>
+      <div class="alert alert-danger">
+        <strong>Error!</strong> Invalid email or password.
+      </div>
+      <% } else if (error.invalidAccess) { %>
+      <div class="alert alert-danger">
+        <strong>Error!</strong> You should be logged in to access URLS.
+      </div>
+      <% } %>
       <h2>Login</h2>
       <form method="POST" action="/login">
         <label class="card-title">Email:</label>
