--- a/tinyapp/views/urls_register.ejs
+++ b/tinyapp/views/urls_register.ejs
@@ -14,6 +14,15 @@
   <body>
     <%- include('partials/_header') %>
     <div class="card-footer text-muted">
+      <% if (error.emailPassword) { %>
+      <div class="alert alert-danger">
+        <strong>Error!</strong> Invalid email or password.
+      </div>
+      <% } else if (error.emailExists) { %>
+      <div class="alert alert-danger">
+        <strong>Error!</strong> Email already exists.
+      </div>
+      <% } %>
       <h2>Register</h2>
       <form method="POST" action="/register">
         <label class="card-title">Email:</label>
